--- a/itm8_kodtest_console/itm8_kodtest_console.csproj
+++ b/itm8_kodtest_console/itm8_kodtest_console.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Polly" Version="8.4.1" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
